--- a/src/main/resources/pages/fragment/layout/sidebar.html
+++ b/src/main/resources/pages/fragment/layout/sidebar.html
@@ -7,6 +7,14 @@
             <li class="nav-header">Sidebar</li>
             <li th:attr="class=${isFirstSide} ? 'active' : ''"><a th:attr="href=@{/index}">联系方式</a></li>
             <li th:attr="class=${isPagination} ? 'active' : ''"><a th:attr="href=@{/ajaxpagination}">分页</a></li>
+            <li class="nav-header">Demo</li>
+
+
+            <li><a th:attr="href=@{/demo/example3}">Helper objects awesomeness</a></li>
+            <li><a th:attr="href=@{/demo/example4}">Projection &amp; Selection on collection</a></li>
+            <li><a th:attr="href=@{/demo/html/example5}">Spring EL (SpEL)</a></li>
+            <li><a th:attr="href=@{/demo/html/example6}">Inlining &amp; Javascript tricks</a></li>
+            <li><a th:attr="href=@{/demo/html/example7}">获取Security登陆信息</a></li>
         </ul>
     </div>
 </div>
