--- a/src/main/resources/pages/fragment/layout/mainLayout.html
+++ b/src/main/resources/pages/fragment/layout/mainLayout.html
@@ -15,6 +15,15 @@
     <script th:src="@{/static/common/js/jquery.form.min.js}"></script>
     <script th:src="@{/static/bootstrap/js/bootstrap.min.js}"></script>
     <script th:src="@{/static/datatables/js/jquery.dataTables.js}"></script>
+    <script th:inline="javascript">
+        /*<![CDATA[*/
+        if (!this.SimpleMVC) {
+            this.SimpleMVC = {};
+            SimpleMVC.contextPath = /*[[@{'/'}]]*/"/test";
+            SimpleMVC.editAction =  /*[[@{'/edit_input'}]]*/"/test";
+        }
+        /*]]>*/
+    </script>
 </head>
 <body>
 <div th:include="fragment/layout/navbar::navbar" th:remove="tag"></div>
