add simple ajax pager

--- a/src/main/resources/pages/fragment/layout/sidebar.html
+++ b/src/main/resources/pages/fragment/layout/sidebar.html
@@ -11,6 +11,9 @@
             <li th:attr="class=${isPagination} ? 'active' : ''"><a th:attr="href=@{/ajaxpagination}">Dandelion-datatables</a>
             </li>
             <li><a th:attr="href=@{/pageDemo/simple}">简单分页</a></li>
+            <li><a th:attr="href=@{/pageDemo/simple2}">简单分页2</a></li>
+            <li><a th:attr="href=@{/pageDemo/ajaxIndex}">Ajax分页</a></li>
+
             <li class="nav-header">Demo</li>
 
 
